test/e2e/fail_compile/generics/cannot_infer_generic_return_only.cst
enum Flag<T> {
    On,
    Off,
}

fn on<T>() -> Flag<T> {
    Flag::On
}

fn main() {
    on();
}
